# google-calendar-analyzer

./: .gitignore  Cargo.toml  README.md  config.yaml.template
.github/workflows/: build.yml
src/: calendar.rs  config.rs  display.rs  main.rs  oauth.rs
