[package]
name = "google-calendar"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.31"
oauth2 = "4.4.2"
reqwest = {version = "0.11.20", features = ["json"]}
serde = "1.0.188"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
tokio = {version = "1.32.0", features = ["full"]}
url = "2.4.1"
urlencoding = "2.1.3"

[[bin]]
name = "main"
path = "src/main.rs"

[[bin]]
name = "version"
path = "scripts/version.rs"