[package]
name = "google-calendar"
version = "0.1.1"
edition = "2021"
default-run = "google-calendar-analyzer"

[dependencies]
anyhow = "1.0.75"
chrono = "0.4.31"
oauth2 = "4.4.2"
reqwest = {version = "0.11.20", features = ["json"]}
serde = "1.0.189"
serde_json = "1.0.107"
serde_yaml = "0.9.25"
thiserror = "1.0.50"
tokio = {version = "1.37.0", features = ["full"]}
url = "2.4.1"
urlencoding = "2.1.3"

[[bin]]
name = "google-calendar-analyzer"
path = "src/main.rs"

[[bin]]
name = "version"
path = "scripts/version.rs"
